Improve backspacing function -- now appeals to inputFilter to ensure correct input following a backspace.

--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,7 @@ button:hover {
   overflow: hidden;
   max-width: 320px;
   width: 100%;
-  height: 548px;
+  height: 542px;
  }
 
 .container--col-fluid {
@@ -142,7 +142,7 @@ button:hover {
   background-color: #fcfcfc;
   
   
-  padding: 10px;
+  padding: 8px;
   margin: 0;
 }
 
